--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Professional Website</title>
-	<meta name="description" content="This is my personal website where you can find information about me and my work.">
-	<meta name="keywords" content="personal website, Tom Harty, bio, work, education">
+	<title>Tom Harty - Personal Website</title>
+	<meta name="description" content="Tom Harty's Personal Website">
+	<meta name="keywords" content="Tom Harty, Personal, Website">
 	<meta name="author" content="Tom Harty">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- Favicon -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
-	<!-- Custom CSS -->
+	<!-- CSS Stylesheets -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- Font Awesome CSS -->
@@ -20,21 +21,31 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
-	<!-- jQuery -->
+	<!-- Scripts -->
 	<script src="js/jquery-3.6.0.min.js"></script>
-
-	<!-- Bootstrap JS -->
 	<script src="js/bootstrap.min.js"></script>
-
-	<!-- Custom JS -->
 	<script src="js/script.js"></script>
+
+	<!-- Chatbot Script -->
+	<script type="text/javascript" data-cfasync="false" src="https://humanchat.net/build/js/humanbot_latest.js?v=1.4.8" crossorigin="anonymous"></script>
+	<script>
+		var aiBot = new AiBot({embedId: 'FXXQf8gm3YMY', remoteBaseUrl: 'https://humanchat.net/', version: '1.4.8'});
+	</script>
 </head>
 <body>
 	<!-- Header -->
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="#">My Personal Website</a>
+				<a class="navbar-brand" href="#">Tom Harty</a>
+				<!-- Navigation Links -->
+			</div>
+		</nav>
+<!-- Header -->
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<a class="navbar-brand" href="#">Tom Harty</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -47,7 +58,7 @@
 							<a class="nav-link" href="#about">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#services">Services</a>
+							<a class="nav-link" href="#resume">Resume</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#portfolio">Portfolio</a>
@@ -74,56 +85,66 @@
 
 	<!-- Main Content -->
 	<main>
+		<section id="about" class="section-padding">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2About</h2>
+<p class="lead">I am a doctoral candidate in business administration with a passion for web development and teaching. I have experience in various programming languages and technologies, including HTML, CSS, JavaScript, Bootstrap, R, Python, SQL, and SAS.</p>
+<p>On this website, you can learn more about my professional background, view my resume and portfolio, and contact me for potential collaboration or job opportunities.</p>
+</div>
+</div>
+</div>
+</section>
+	<section id="resume" class="section-padding">
 		<div class="container">
-			<div class="row" id="about">
+			<div class="row">
 				<div class="col-md-12">
-					<h2>About
-          <!DOCTYPE html>
-          <html lang="en">
-          <head>
-              <meta charset="UTF-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <!-- SEO meta tags -->
-              <meta name="description" content="Tom Harty's Personal Website">
-              <meta name="keywords" content="Tom Harty, Personal, Website">
-              <meta name="author" content="Tom Harty">
-              <title>John Doe - Personal Website</title>
-              <!-- CSS stylesheet link -->
-              <link rel="stylesheet" href="css/style.css">
-          </head>
-          <body>
-              <nav>
-                  <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Resume</a></li>
-                      <li><a href="#">Portfolio</a></li>
-                      <li><a href="#">Contact</a></li>
-                  </ul>
-              </nav>
-              <header>
-                  <h1>Tom Harty</h1>
-                  <h2>Doctoral Candidate | Future Professor</h2>
-              </header>
-              <main>
-                  <section>
-                      <h3>About Me</h3>
-                      <p>I am a doctoral candidate in business administration with a passion for web development and teaching. I have experience in various programming languages and technologies, including HTML, CSS, JavaScript, Bootstrap, R, python, SQL, and SAS.</p>
-                      <p>On this website, you can learn more about my professional background, view my resume and portfolio, and contact me for potential collaboration or job opportunities.</p>
-                  </section>
-                  <section>
-                      <h3>Resume</h3>
-											<p>View my resume <a href="path/to/your/resume.pdf" download>here</a>.</p>
-                  </section>
-                  <section>
-										<h3>Dissertation</h3>
-<p>View my dissertation <a href="dissertation.pdf">here</a>.</p>
-                  </section>
-              </main>
-              <footer>
-                  <p>© 2023 Tom Harty</p>
-              </footer>
-              <!-- JavaScript script link -->
-              <script src="js/script.js"></script>
-          </body>
-          </html>
+					<h2>Resume</h2>
+					<p>View my resume <a href="path/to/your/resume.pdf" download>here</a>.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="portfolio" class="section-padding">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Portfolio</h2>
+					<p>Here you can find examples of my work and projects I've completed.</p>
+					<!-- Include your portfolio items here -->
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="contact" class="section-padding">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Contact</h2>
+					<p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
+					<ul>
+						<li><i class="fas fa-envelope"></i> Email: [email protected]</li>
+						<li><i class="fas fa-phone"></i> Phone: +1234567890</li>
+						<li><i class="fas fa-map-marker-alt"></i> Location: City, State</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+</main>
+
+<!-- Footer -->
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<p>&copy; 2023 Tom Harty | All rights reserved</p>
+			</div>
+		</div>
+	</div>
+</footer>
+</body>
+</html>
