--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 	<!-- CSS Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
 
 	<!-- Font Awesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-BcLXkXmZcPpFc7J6ZgsGsUGvQeFwbW+PHD7Bz5GqsfV83X+9059455ufoN+aH4kh" crossorigin="anonymous">
@@ -22,9 +22,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
 	<!-- Scripts -->
-	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="script.js/jquery-3.6.0.min.js"></script>
+	<script src="script.js/bootstrap.min.js"></script>
+	<script src="script.js/script.js"></script>
 
 	<!-- Chatbot Script -->
 	<script type="text/javascript" data-cfasync="false" src="https://humanchat.net/build/js/humanbot_latest.js?v=1.4.8" crossorigin="anonymous"></script>
