--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
 	<!-- Scripts -->
-	<script src="script.js/jquery-3.6.0.min.js"></script>
-	<script src="script.js/bootstrap.min.js"></script>
-	<script src="script.js/script.js"></script>
+	<script src="js/script.js"></script>
+
 
 	<!-- Chatbot Script -->
 	<script type="text/javascript" data-cfasync="false" src="https://humanchat.net/build/js/humanbot_latest.js?v=1.4.8" crossorigin="anonymous"></script>
