--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
 	<!-- Scripts -->
-	<script src="js/script.js"></script>
+	<script src="script.js"></script>
 
 
 	<!-- Chatbot Script -->
