--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h2>Resume</h2>
-					<p>View my resume <a href="path/to/your/resume.pdf" download>here</a>.</p>
+					<p>View my resume <a href="Tom Harty res.docx" download>here</a>.</p>
 				</div>
 			</div>
 		</div>
