--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
 					<h2>Contact</h2>
 					<p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
 					<ul>
-						<li><i class="fas fa-envelope"></i> Email: [email protected]</li>
-						<li><i class="fas fa-phone"></i> Phone: +1234567890</li>
-						<li><i class="fas fa-map-marker-alt"></i> Location: City, State</li>
+						<li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
+						<li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
 					</ul>
 				</div>
 			</div>
