--- a/index.html
+++ b/index.html
@@ -114,37 +114,54 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>Portfolio</h2>
-				<p>Here you can find examples of my work and projects I've completed.</p>
-				<!-- Include your portfolio items here. Replace "youtube-thumbnail.jpg", "website-thumbnail.jpg", "children-youtube-thumbnail.jpg", and "children-website-thumbnail.jpg" with the actual file names or paths for the thumbnail images you want to use. Also, update the descriptions and adjust the links accordingly to match your YouTube channels and websites. -->
+				<h2 class="section-title">Portfolio</h2>
+				<p class="section-description">Here you can find examples of my work and projects I've completed.</p>
 				<div class="portfolio-items">
-					<div class="item">
-						<a href="https://www.youtube.com/channel/UCE9EmbibdrVGCODfuOxjpLw" target="_blank">
-							<img src="youtube-thumbnail.jpg" alt="YouTube Channel">
-							<h3>Your YouTube Channel</h3>
-							<p>Description of your YouTube channel goes here.</p>
-						</a>
+					<div class="portfolio-item">
+						<h3 class="portfolio-title">YouTube Channel</h3>
+						<p class="portfolio-description">Description of your YouTube channel goes here.</p>
+						<div class="youtube-carousel">
+							<!-- YouTube video 1 -->
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/video1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<!-- YouTube video 2 -->
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/video2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<!-- YouTube video 3 -->
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/video3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
 					</div>
-					<div class="item">
-						<a href="https://lordsofland.net/" target="_blank">
-							<img src="website-thumbnail.jpg" alt="Website">
-							<h3>Your Website</h3>
-							<p>Description of your website goes here.</p>
-						</a>
+					<div class="portfolio-item">
+						<h3 class="portfolio-title">Website</h3>
+						<p class="portfolio-description">Description of your website goes here.</p>
+						<a href="https://lordsofland.net/" target="_blank" class="portfolio-link">Visit Website</a>
 					</div>
-					<div class="item">
-						<a href="https://www.youtube.com/channel/UCof_8zk1U1seDHAUxnb-8ww" target="_blank">
-							<img src="children-youtube-thumbnail.jpg" alt="Children's YouTube Channel">
-							<h3>Children's YouTube Channel</h3>
-							<p>Description of your children's YouTube channel goes here.</p>
-						</a>
+					<div class="portfolio-item">
+						<h3 class="portfolio-title">Children's YouTube Channel</h3>
+						<p class="portfolio-description">Description of your children's YouTube channel goes here.</p>
+						<div class="youtube-carousel">
+							<!-- YouTube video 1 -->
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/video1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<!-- YouTube video 2 -->
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/video2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<!-- YouTube video 3 -->
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/video3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
 					</div>
-					<div class="item">
-						<a href="http://hartyboysgaming.com/" target="_blank">
-							<img src="children-website-thumbnail.jpg" alt="Children's Website">
-							<h3>Children's Website</h3>
-							<p>Description of your children's website goes here.</p>
-						</a>
+					<div class="portfolio-item">
+						<h3 class="portfolio-title">Children's Website</h3>
+						<p class="portfolio-description">Description of your children's website goes here.</p>
+						<a href="http://hartyboysgaming.com/" target="_blank" class="portfolio-link">Visit Website</a>
 					</div>
 				</div>
 			</div>
