--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Welcome to My Personal Website</h1>
+						<h1>Welcome to My Professional Website</h1>
 						<p class="lead">This is where you can find information about me and my work.</p>
 					</div>
 				</div>
@@ -119,47 +119,93 @@
 			<div class="col-md-12">
 				<h2>Portfolio</h2>
 				<p>Here you can find examples of my work and projects I've completed.</p>
-				<!-- Include your portfolio items here -->
-
-				<div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<h3>YouTube Channel</h3>
+				<p>Description of your YouTube channel goes here.</p>
+				<!-- YouTube carousel -->
+				<div id="youtube-carousel" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
-					<ul class="carousel-indicators">
-						<li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
-						<li data-target="#portfolio-carousel" data-slide-to="1"></li>
-						<li data-target="#portfolio-carousel" data-slide-to="2"></li>
-					</ul>
-
+					<ol class="carousel-indicators">
+						<li data-target="#youtube-carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#youtube-carousel" data-slide-to="1"></li>
+						<li data-target="#youtube-carousel" data-slide-to="2"></li>
+					</ol>
 					<!-- Slides -->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<!-- YouTube video 1 -->
 							<div class="youtube-video">
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/video1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<!-- YouTube video 2 -->
 							<div class="youtube-video">
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/video2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<!-- YouTube video 3 -->
 							<div class="youtube-video">
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/video3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
-
 					<!-- Controls -->
-<a class="carousel-control-prev" href="#portfolio-carousel" role="button" data-slide="prev">
-	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	<span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" href="#portfolio-carousel" role="button" data-slide="next">
-	<span class="carousel-control-next-icon" aria-hidden="true"></span>
-	<span class="sr-only">Next</span>
-</a>
+					<a class="carousel-control-prev" href="#youtube-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#youtube-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<h3>Children's YouTube Channel</h3>
+				<p>Description of your children's YouTube channel goes here.</p>
+				<!-- Children's YouTube carousel -->
+				<div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#children-youtube-carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#children-youtube-carousel" data-slide-to="1"></li>
+						<li data-target="#children-youtube-carousel" data-slide-to="2"></li>
+					</ol>
+					<!-- Slides -->
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/children-video1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/children-video2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="youtube-video">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/children-video3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
+					</div>
+					<!-- Controls -->
+					<a class="carousel-control-prev" href="#children-youtube-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#children-youtube-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 
 
