--- a/index.html
+++ b/index.html
@@ -209,21 +209,45 @@
 
 
 
-	<section id="contact" class="section-padding">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h2>Contact</h2>
-					<p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
-					<ul>
-						<li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
-						<li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
-					</ul>
-				</div>
+<section id="contact" class="section-padding">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Contact</h2>
+				<p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
+				<ul>
+					<li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
+					<li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
+				</ul>
 			</div>
 		</div>
-	</section>
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<form action="https://formspree.io/f/xjvqbbvn" method="POST">
+					<div class="form-group">
+						<label for="name">First Name</label>
+						<input type="text" class="form-control" id="name" name="name" required>
+					</div>
+					<div class="form-group">
+						<label for="last-name">Last Name</label>
+						<input type="text" class="form-control" id="last-name" name="last-name" required>
+					</div>
+					<div class="form-group">
+						<label for="email">Email</label>
+						<input type="email" class="form-control" id="email" name="email" required>
+					</div>
+					<div class="form-group">
+						<label for="message">Message</label>
+						<textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+					</div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>
+</section>
 </main>
+
 
 <!-- Footer -->
 <footer>
@@ -285,5 +309,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/formspree@1.0.0"></script>
 </body>
 </html>
