--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2About</h2>
-<p class="lead">I am a doctoral candidate in business administration with passions for coding development, AI integration and helping others realize their full potential. I have experience in various programming languages and technologies, including HTML, CSS, JavaScript, Bootstrap, R, Python, SQL, and SAS among others.</p>
+					<h2About</h2>
+<p class="lead">I am a doctoral candidate in business administration with passions for coding development, AI integration, and helping others realize their full potential. I have experience in various programming languages and technologies, including HTML, CSS, JavaScript, Bootstrap, R, Python, SQL, and SAS among others.</p>
 <p>On this website, you can learn more about my professional background using the integrated AI chat bot, view my resume & portfolio, and contact me for potential collaboration or job opportunities.</p>
 </div>
 </div>
