--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<h3>YouTube Channel</h3>
-				<p>Description of your YouTube channel goes here.</p>
+<h3><a href="https://www.youtube.com/channel/UCE9EmbibdrVGCODfuOxjpLw" target="_blank">Lord of Land</a></h3>
+<p>Description of your YouTube channel goes here.</p>
 				<!-- YouTube carousel -->
 				<div id="youtube-carousel" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
@@ -163,8 +163,8 @@
 				</div>
 			</div>
 			<div class="col-md-6">
-				<h3>Children's YouTube Channel</h3>
-				<p>Description of your children's YouTube channel goes here.</p>
+<h3><a href="https://www.youtube.com/channel/UCof_8zk1U1seDHAUxnb-8ww" target="_blank">Harty Boys Gaming</a></h3>
+<p>Description of your children's YouTube channel goes here.</p>
 				<!-- Children's YouTube carousel -->
 				<div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
