--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://youtu.be/J7Q3gGhikM4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=2fYdenDi97Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://youtu.be/2fYdenDi97Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=160jHmFboTk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://youtu.be/iZsZWb_4ALI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=pmAixGcVIhs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
