--- a/index.html
+++ b/index.html
@@ -125,42 +125,43 @@
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCE9EmbibdrVGCODfuOxjpLw" target="_blank">Lord of Land</a></h3>
 <p>This is one of my attempts at providing free and helpful knowledge to the masses. If the information that I've learned throughout my long, illustrious career and educational journey can help others then I'm willing to facilitate that learning.</p>
-				<!-- YouTube carousel -->
-				<div id="youtube-carousel" class="carousel slide" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#youtube-carousel" data-slide-to="0" class="active"></li>
-						<li data-target="#youtube-carousel" data-slide-to="1"></li>
-						<li data-target="#youtube-carousel" data-slide-to="2"></li>
-					</ol>
-					<!-- Slides -->
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=2fYdenDi97Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=160jHmFboTk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=pmAixGcVIhs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-						</div>
-					</div>
-					<!-- Controls -->
-					<a class="carousel-control-prev" href="#youtube-carousel" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#youtube-carousel" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
+<!-- YouTube carousel -->
+<div id="youtube-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#youtube-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#youtube-carousel" data-slide-to="1"></li>
+    <li data-target="#youtube-carousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2fYdenDi97Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/160jHmFboTk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pmAixGcVIhs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="carousel-control-prev" href="#youtube-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#youtube-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 			</div>
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCof_8zk1U1seDHAUxnb-8ww" target="_blank">Harty Boys Gaming</a></h3>
