--- a/index.html
+++ b/index.html
@@ -166,49 +166,43 @@
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCof_8zk1U1seDHAUxnb-8ww" target="_blank">Harty Boys Gaming</a></h3>
 <p>I fully believe schools do their best to educate our children and especially where I am located, they do a fine job, but education should also come from home. This channel gives my children the chance to learn about many business initiatives from an early age such as branding, marketing, advertising, and more all while they get to have fun playing their games.</p>
-				<!-- Children's YouTube carousel -->
-				<div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#children-youtube-carousel" data-slide-to="0" class="active"></li>
-						<li data-target="#children-youtube-carousel" data-slide-to="1"></li>
-						<li data-target="#children-youtube-carousel" data-slide-to="2"></li>
-					</ol>
-					<!-- Slides -->
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=i3hBFZWP7C4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=uQwyvOVUrHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="youtube-video">
-								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=6Yk8q6boRQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-						</div>
-					</div>
-					<!-- Controls -->
-					<a class="carousel-control-prev" href="#children-youtube-carousel" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#children-youtube-carousel" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+<!-- Children's YouTube carousel -->
+<div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#children-youtube-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#children-youtube-carousel" data-slide-to="1"></li>
+    <li data-target="#children-youtube-carousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/i3hBFZWP7C4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uQwyvOVUrHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6Yk8q6boRQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="carousel-control-prev" href="#children-youtube-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#children-youtube-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 </section>
-
-
-
 
 <section id="contact" class="section-padding">
 	<div class="container">
