--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<div class="row">
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCE9EmbibdrVGCODfuOxjpLw" target="_blank">Lord of Land</a></h3>
-<p>This is one of my attempts at providing free and helpful knowledge to the masses. If the information that I've learned throughout my long, illustrious career and educational journey can help others then I'm willing to facilitate that learning.</p>
+<p>This is one of my attempts at providing free and helpful knowledge to the masses. If the information that I've learned throughout my long, illustrious career and educational journey can help others, then I'm willing to facilitate that learning.</p>
 <!-- YouTube carousel -->
 <div id="youtube-carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -165,7 +165,7 @@
 			</div>
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCof_8zk1U1seDHAUxnb-8ww" target="_blank">Harty Boys Gaming</a></h3>
-<p>I fully believe schools do their best to educate our children and especially where I am located, they do a fine job, but education should also come from home. This channel gives my children the chance to learn about many business initiatives from an early age such as branding, marketing, advertising, and more all while they get to have fun playing their games.</p>
+<p>I fully believe schools do their best to educate our children, and especially where I am located, they do a fine job, but education should also come from home. This channel gives my children the chance to learn about many business initiatives from an early age such as branding, marketing, advertising, and more all while they get to have fun playing their games.</p>
 <!-- Children's YouTube carousel -->
 <div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -202,7 +202,11 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+</div>
+</div>
+</div>
 </section>
+
 
 <section id="contact" class="section-padding">
 	<div class="container">
