--- a/index.html
+++ b/index.html
@@ -212,12 +212,20 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>Contact</h2>
-				<p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
-				<ul>
-					<li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
-					<li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
-				</ul>
+        <h2>Contact</h2>
+        <p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
+        <ul>
+          <li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
+          <li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
+        </ul>
+        <div class="contact-links">
+          <ul>
+            <li><a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank">Lord of Land Facebook Page</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a></li>
+            <li><a href="https://lordsofland.net/" target="_blank">Website</a></li>
+            <li><a href="http://hartyboysgaming.com/" target="_blank">Kids' Website</a></li>
+          </ul>
 			</div>
 		</div>
 		<div class="row">
