--- a/index.html
+++ b/index.html
@@ -209,51 +209,57 @@
 
 
 <section id="contact" class="section-padding">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
         <h2>Contact</h2>
         <p>If you'd like to get in touch with me, feel free to reach out using the contact form or the contact information below:</p>
-        <ul>
-          <li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
-          <li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
-        </ul>
-        <div class="contact-links">
-          <ul>
-            <li><a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank">Lord of Land Facebook Page</a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a></li>
-            <li><a href="https://lordsofland.net/" target="_blank">Website</a></li>
-            <li><a href="http://hartyboysgaming.com/" target="_blank">Kids' Website</a></li>
-          </ul>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8 offset-md-2">
-				<form action="https://formspree.io/f/xjvqbbvn" method="POST">
-					<div class="form-group">
-						<label for="name">First Name</label>
-						<input type="text" class="form-control" id="name" name="name" required>
-					</div>
-					<div class="form-group">
-						<label for="last-name">Last Name</label>
-						<input type="text" class="form-control" id="last-name" name="last-name" required>
-					</div>
-					<div class="form-group">
-						<label for="email">Email</label>
-						<input type="email" class="form-control" id="email" name="email" required>
-					</div>
-					<div class="form-group">
-						<label for="message">Message</label>
-						<textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-					</div>
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</form>
-			</div>
-		</div>
-	</div>
+        <div class="row">
+          <div class="col-md-6 offset-md-3">
+            <ul>
+              <li><i class="fas fa-envelope"></i> Email: tom.hartymba@gmail.com</li>
+              <li><i class="fas fa-map-marker-alt"></i> Location: Yorktown, IN</li>
+            </ul>
+            <div class="contact-links">
+              <ul>
+                <li><a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank">Lord of Land Facebook Page</a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a></li>
+                <li><a href="https://lordsofland.net/" target="_blank">Website</a></li>
+                <li><a href="http://hartyboysgaming.com/" target="_blank">Kids' Website</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <form action="https://formspree.io/f/xjvqbbvn" method="POST">
+              <div class="form-group">
+                <label for="name">First Name</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+              </div>
+              <div class="form-group">
+                <label for="last-name">Last Name</label>
+                <input type="text" class="form-control" id="last-name" name="last-name" required>
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 </main>
+
 
 
 <!-- Footer -->
