--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
             </ul>
             <div class="contact-links">
               <ul>
-                <li><a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">My LinkedIn</a></li>
                 <li><a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank">Lord of Land Facebook Page</a></li>
                 <li><a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a></li>
-                <li><a href="https://lordsofland.net/" target="_blank">Website</a></li>
-                <li><a href="http://hartyboysgaming.com/" target="_blank">Kids' Website</a></li>
+                <li><a href="https://lordsofland.net/" target="_blank">Lord of Land Website</a></li>
+                <li><a href="http://hartyboysgaming.com/" target="_blank">Harty Boys Website</a></li>
               </ul>
             </div>
           </div>
