--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<div class="row">
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCE9EmbibdrVGCODfuOxjpLw" target="_blank">Lord of Land</a></h3>
-<p>This is one of my attempts at providing free and helpful knowledge to the masses. If the information that I've learned throughout my long, illustrious career and educational journey can help others, then I'm willing to facilitate that learning.</p>
+<p>Drawing upon my extensive expertise gained through a distinguished career and an unwavering dedication to continuous learning, I am driven by a genuine passion to uplift and inspire others. Lord of Land stands as a beacon of light in a world where financial literacy, self-discovery, and holistic well-being are of utmost importance.</p>
 <!-- YouTube carousel -->
 <div id="youtube-carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -165,7 +165,7 @@
 			</div>
 			<div class="col-md-6">
 <h3><a href="https://www.youtube.com/channel/UCof_8zk1U1seDHAUxnb-8ww" target="_blank">Harty Boys Gaming</a></h3>
-<p>I fully believe schools do their best to educate our children, and especially where I am located, they do a fine job, but education should also come from home. This channel gives my children the chance to learn about many business initiatives from an early age such as branding, marketing, advertising, and more all while they get to have fun playing their games.</p>
+<p>In a world where education extends beyond the classroom, I'm helping my children with their own youtube channel for a catalyst of growth, innovation, and entrepreneurial spirit. While schools undoubtedly play a vital role in our children's development, I firmly believe that the home is a rich source of learning opportunities waiting to be tapped. That's why I have embraced their YT channel as a platform where my children can embark on a thrilling journey of discovery, blending the excitement of gaming with invaluable insights into business acumen, such as branding, marketing, advertising, and more.</p>
 <!-- Children's YouTube carousel -->
 <div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
