--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h1>Welcome to My Professional Website</h1>
-						<p class="lead">This is where you can find information about me and my work.</p>
+						<p class="lead">Welcome to my professional website, where you can discover more about me and my work. I am a dedicated and passionate doctoral candidate in business administration, with a keen interest in coding development, AI integration, and helping individuals unlock their full potential. With extensive experience in various programming languages and technologies, including HTML, CSS, JavaScript, Bootstrap, R, Python, SQL, and SAS, I possess a strong technical foundation.</p>
 					</div>
 				</div>
 			</div>
