--- a/index.html
+++ b/index.html
@@ -35,24 +35,20 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-	<!-- Header -->
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container">
-				<a class="navbar-brand" href="#">Tom Harty</a>
-				<!-- Navigation Links -->
-			</div>
-		</nav>
 <!-- Header -->
 <header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
 			<a class="navbar-brand" href="#">
-				<img src="1538960833002.jpeg" alt="Tom Harty" class="profile-picture">
+				<div class="d-flex align-items-center">
+					<img src="1538960833002.jpeg" alt="Tom Harty" class="profile-picture">
+					<span class="ml-2">Tom Harty</span>
+				</div>
 			</a>
 		</div>
 	</nav>
 </header>
+
 
 
 		<div class="header-content">
