--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 				<div class="col-md-12">
 					<h2>Resume</h2>
 					<p>View my resume <a href="Tom Harty res.docx" download>here</a>.</p>
+					<p>Coming soon - An excerpt from my dissertation for your viewing.</p>
+					<p>Coming soon - An excerpt from my management philosophies book for your viewing.</p>
 				</div>
 			</div>
 		</div>
