--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="bootstrap.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles.css">
 
 	<!-- Font Awesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-BcLXkXmZcPpFc7J6ZgsGsUGvQeFwbW+PHD7Bz5GqsfV83X+9059455ufoN+aH4kh" crossorigin="anonymous">
