--- a/index.html
+++ b/index.html
@@ -188,6 +188,19 @@
 </div>
 </section>
 
+<section id="collaboration" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Collaboration and Opportunities</h2>
+		<p>Please contact if you would like to discuss Collaboration ideas, such as appearing as a guest on your podcast, writing a guest blog post, interviews, or other ideas.</p>
+	              </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+		
 
 <section id="contact" class="section-padding">
   <div class="container">
