--- a/index.html
+++ b/index.html
@@ -256,16 +256,26 @@
 
 
 
-<!-- Footer -->
 <footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<p>&copy; 2023 Tom Harty | All rights reserved</p>
-			</div>
-		</div>
-	</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <ul class="footer-links">
+          <li><a href="mailto:tom.hartymba@gmail.com"><i class="fas fa-envelope"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.lordsofland.net" target="_blank">Lord of Land</a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="https://www.hartyboysgaming.com" target="_blank">Harty Boys Gaming</a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+        <p>&copy; 2023 - <script>document.write(new Date().getFullYear())</script> Tom Harty | All rights reserved</p>
+      </div>
+    </div>
+  </div>
 </footer>
+
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
