--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
           <a href="https://www.lordsofland.net" target="_blank">Lord of Land</a>
           <a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://www.hartyboysgaming.com" target="_blank">Harty Boys Gaming</a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
         <p>&copy; 2023 - <script>document.write(new Date().getFullYear())</script> Tom Harty | All rights reserved</p>
       </div>
