--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" href="styles.css">
 
+	 <!-- Other head elements -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-eI0+r7Z0KnTZWxu9/hAxIWC+bxU9iZqWu8ZKQaBac+8zR2+G8q8p1yjV3vnHN0oO" crossorigin="anonymous">
+
 	<!-- Font Awesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-BcLXkXmZcPpFc7J6ZgsGsUGvQeFwbW+PHD7Bz5GqsfV83X+9059455ufoN+aH4kh" crossorigin="anonymous">
 
