--- a/index.html
+++ b/index.html
@@ -261,25 +261,35 @@
 
 
 
+<!-- Add Font Awesome CSS link -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+<!-- Footer -->
 <footer>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="footer-links">
-          <a href="mailto:tom.hartymba@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:tom.hartymba@gmail.com"><i class="far fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.lordsofland.net" target="_blank">Lord of Land</a>
           <a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://www.hartyboysgaming.com" target="_blank">Harty Boys Gaming</a>
-          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-        <p>&copy; 2023 - <script>document.write(new Date().getFullYear())</script> Tom Harty | All rights reserved</p>
+        <p>&copy; 2023 - <span id="current-year"></span> Tom Harty | All rights reserved</p>
       </div>
     </div>
   </div>
 </footer>
+
+<script>
+  // Update current year dynamically
+  document.getElementById('current-year').textContent = new Date().getFullYear();
+</script>
+
 
 
   <!-- JavaScript -->
