--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 <!-- Footer -->
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
