--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	
 	<!-- Font Awesome CSS -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-BcLXkXmZcPpFc7J6ZgsGsUGvQeFwbW+PHD7Bz5GqsfV83X+9059455ufoN+aH4kh" crossorigin="anonymous">
+	<!link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-BcLXkXmZcPpFc7J6ZgsGsUGvQeFwbW+PHD7Bz5GqsfV83X+9059455ufoN+aH4kh" crossorigin="anonymous">
 
 
 <!-- Add Font Awesome CSS link -->
