--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <!-- Add Font Awesome CSS link -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
@@ -245,20 +245,20 @@
 </section>
 </main>
 
-<!-- Footer -->
+	<!-- Footer -->
 <footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="footer-links">
-          <a href="mailto:tom.hartymba@gmail.com"><i class="far fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:tom.hartymba@gmail.com">tom.hartymba@gmail.com</a>
+          <a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">LinkedIn Profile</a>
           <a href="https://www.lordsofland.net" target="_blank">Lord of Land</a>
-          <a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank"><i class="fab fa-facebook"></i></a>
-	<a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank">Lord of Land Facebook Page</a>
+          <a href="#">Instagram</a>
           <a href="https://www.hartyboysgaming.com" target="_blank">Harty Boys Gaming</a>
-          <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a>
+          <a href="#">Instagram</a>
         </div>
         <p>&copy; 2023 - <span id="current-year"></span> Tom Harty | All rights reserved</p>
       </div>
