--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 </section>
 </main>
 
-	<!-- Footer -->
-<footer class="footer">
+<!-- Footer -->
+<footer class="footer" style="background-color: #333;">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -260,7 +260,7 @@
           <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a>
           <a href="#">Instagram</a>
         </div>
-        <p>&copy; 2023 - <span id="current-year"></span> Tom Harty | All rights reserved</p>
+        <p style="color: #fff;">&copy; 2023 - <span id="current-year"></span> Tom Harty | All rights reserved</p>
       </div>
     </div>
   </div>
