--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<link rel="stylesheet" href="styles.css">
 
 	
-	<!-- Font Awesome CSS -->
+	<-- Font Awesome CSS -->
 	<!link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-BcLXkXmZcPpFc7J6ZgsGsUGvQeFwbW+PHD7Bz5GqsfV83X+9059455ufoN+aH4kh" crossorigin="anonymous">
 
 
-<!-- Add Font Awesome CSS link -->
+<-- Add Font Awesome CSS link -->
 <!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	
 	<!-- Google Fonts -->
