--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<!-- Scripts -->
 	<script src="script.js"></script>
 
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940733557549458"
+     crossorigin="anonymous"></script>
+
 	<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
