--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
           <a href="https://www.hartyboysgaming.com" target="_blank">Harty Boys Gaming</a>
           <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a>
           <a href="#">Instagram</a>
+          <a href="privacy.html">Privacy Policy</a>
         </div>
         <p style="color: #fff;">&copy; 2023 - <span id="current-year"></span> Tom Harty | All rights reserved</p>
       </div>
@@ -284,6 +285,7 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
   // Update current year dynamically
   document.getElementById('current-year').textContent = new Date().getFullYear();
 </script>
+
 
 
 
