--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <h1>Privacy Policy</h1>
   
@@ -32,6 +34,10 @@
   
   <h2>Contact Us</h2>
   <p>If you have any questions or concerns about our Privacy Policy, please contact us.</p>
-</body>
-</html>
 
+  <a href="index.html" class="return-home">Return to Homepage</a>
+
+  <script src="script.js"></script>
+</body>
+
+</html>
